fix autocomplete